<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:background="@color/lightWhite"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".home.Home">

    <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            app:headerLayout="@layout/header"
            app:menu="@menu/main_menu" />


    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <RelativeLayout
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

            >
                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/lightWhite"
                        android:minHeight="?attr/actionBarSize"
                        android:theme="?attr/actionBarTheme"
                        android:layout_marginTop="6dp"
                        android:layout_alignParentTop="true"
                        app:navigationIcon="@drawable/ic_menu" />


                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="38dp"
                          android:textColor="@color/black"
                          android:text="@string/menu"
                          android:layout_alignParentStart="true" android:layout_marginLeft="58dp"
                          android:layout_marginStart="58dp" android:layout_alignParentLeft="true"
                          android:layout_marginTop="6dp" android:layout_alignParentTop="true"/>

                <ImageButton android:layout_width="62dp"
                             android:layout_height="62dp"
                             android:src="@drawable/ic_calendar"
                             android:layout_alignParentRight="true"
                             android:id="@+id/calendar_icon"

                />



            </RelativeLayout>

            <GridLayout
                    android:columnCount="2"
                    android:rowCount="5"
                    android:alignmentMode="alignMargins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            >

                <androidx.cardview.widget.CardView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp"
                >
                    <LinearLayout
                            android:orientation="vertical"
                            android:padding="16dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                    >
                        <Button android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:background="@drawable/button_shape"
                                android:text="@string/BAT"
                                android:id="@+id/bat"
                                android:textColor="@color/white"
                                android:textSize="24sp"


                        />




                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp"
                >
                    <LinearLayout
                            android:orientation="vertical"
                            android:padding="16dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                    >


                        <Button
                                android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:background="@drawable/button_shape"
                                android:text="@string/MTB"
                                android:id="@+id/Mtb"
                                android:textColor="@color/white"
                                android:textSize="24sp"


                        />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp"
                >
                    <LinearLayout
                            android:orientation="vertical"
                            android:padding="16dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                    >

                        <Button android:layout_width="match_parent"
                                android:id="@+id/profile"
                                android:layout_height="150dp"
                                android:background="@drawable/button_shape"
                                android:text="@string/Profile"
                                android:textColor="@color/white"
                                android:textSize="24sp"

                        />


                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp"
                >
                    <LinearLayout
                            android:orientation="vertical"
                            android:padding="16dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                    >
                        <Button android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:background="@drawable/button_shape"
                                android:text="@string/map"
                                android:id="@+id/balance"
                                android:textColor="@color/white"
                                android:textSize="24sp"
                                android:layout_row="0"
                                android:layout_column="5"/>


                    </LinearLayout>


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp"
                >
                    <LinearLayout
                            android:orientation="vertical"
                            android:padding="16dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                    >

                        <Button android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:background="@drawable/button_shape"
                                android:text="@string/book_checker"
                                android:textColor="@color/white"
                                android:textSize="24sp"

                                android:id="@+id/book_checker"/>



                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:layout_columnWeight="1"
                        android:layout_rowWeight="1"
                        app:cardElevation="6dp"
                        app:cardCornerRadius="12dp"
                        android:layout_margin="12dp"
                >
                    <LinearLayout
                            android:orientation="vertical"
                            android:padding="16dp"
                            android:gravity="center"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"

                    >
                        <Button android:layout_width="match_parent"
                                android:layout_height="150dp"
                                android:background="@drawable/button_shape"
                                android:text="@string/Contact_us"
                                android:id="@+id/contact_us"
                                android:textColor="@color/white"
                                android:textSize="24sp"


                        />



                    </LinearLayout>


                </androidx.cardview.widget.CardView>




            </GridLayout>


        </LinearLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>